Spike --gpu on Metal, and find the kernel is the wrong thing to ship there
The Metal half of todo-123 was a sketch with its risks named, written without
Apple hardware. It has now been run on an M4 Max, and it changes what phase 5
should build.

Three of the sketch's claims survived. Pure FFM reaches Metal: Mtl.java is
MTLCreateSystemDefaultDevice plus eleven objc_msgSend signatures, and that is
the whole binding -- no Swift shim, which is what ../silicon reaches Metal
through and what we could not have shipped. It survives native-image next to
-H:+VectorAPISupport, so Metal does not re-enter todo-102's fight either. And
runtime MSL compilation is better than the PTX story rather than merely equal
to it: the compiler is in the OS, so a machine with no Xcode at all compiled
the kernels in 2.3 ms warm, with no build-time artifact to generate, check in
or pin to a virtual architecture.

One claim was wrong in our favour and one measurement was new. MSL has no
double -- the compiler rejects it outright, while half, bfloat and 64-bit int
all compile -- so on Apple an #d array can only DECLINE, and phase 0 goes from
"do this so the measurements are honest" to "do this or the flag is inert".
And the ~85 us floor, five times CUDA's, is paid per COMMAND BUFFER rather
than per dispatch: fifty dispatches in one buffer cost 8.8 us each. Spinning on
the buffer's status instead of blocking changes nothing, so there is no cheaper
wait to go find. That makes residency on Apple the way the submission floor is
amortized, not just a memory optimization, and the residency probe separates
the two costs to show it -- at n=128 five separate submissions cost as much as
five full round trips with their host copies.

Then the part that decides phase 5. Apple ships two tuned libraries inside the
OS, so every argument that killed cuBLAS is absent here. MPS is 5.5x the naive
kernel at n=2048 and bit-identical to it -- 0 differing cells in 1,048,576,
verified against a poisoned output buffer -- 